implement: add-tracker-port